# ollama-obsidian-indexer

./: .env.sample  .gitignore  Dockerfile  Modelfile  README.md  docker-compose-example.yml  docker-compose.yml  flake.nix  index.py  indexer.py  langchain.js  llm.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run-llm.py  serve-api.py  server.py
faiss/: docstore.json
non-working-wip/: confluence.py  index.js  langchainVectorize.js
ollama_obsidian_indexer/: .env.sample  __init__.py  index.py  llm.py  server.py
storage/: default__vector_store.json  docstore.json  index_store.json
